namespace * dressdiscover.lib.properties

// @java_implements org.thryft.waf.lib.Properties
struct GlobalProperties {
	// dev, staging, production, etc.
	string environment;
}
